# XJTU-COMP400627-OS

./: LICENSE  README.md
作业/第一次/: README.md  第一次.md
作业/第一次/c-s/: trans-client.c
作业/第一次/fork/: child.c
作业/第三次/: README.md  第三次.md
作业/第三次/sol/: CMakeLists.txt  copy_process.c  get_process.c  main.c  put_process.c  semaphore.c  semaphore.h
作业/第二次/: 5.1-5.5problems.md  README.md
作业/第五次/: README.en.md  第五次.md
作业/第四次/: README.en.md  README.md  main.cpp  main.java  main.py  main.swift  第四次.md
实验/: README.md
实验/xv6-riscv/: Makefile
实验/xv6-riscv/kernel/: console.c  console.d  defs.h  entry.S  exec.c  file.h  fs.c  fs.h  kalloc.c  kernel  kernel.asm  kernel.sym  kernelvec.S  log.c  main.c  param.h  pipe.c  plic.c  printf.c  printf.d  proc.c  proc.h  riscv.h  start.c  string.c  syscall.c  syscall.h  sysfile.c  sysinfo.h  sysproc.c  sysproc.d  trampoline.S  trap.c  uart.c  virtio.h  virtio_disk.c  vm.c
实验/xv6-riscv/mkfs/: mkfs
实验/xv6-riscv/user/: _bigfile  _cat  _echo  _find  _ln  (+78 more)
实验/提交的patch文件/: 0001-Lab1.patch  0001-Lab2.patch  0001-Lab3.patch  0001-Lab4.patch
实验/说明文档/: Lab1.md  Lab2.md  Lab3.md  Lab4.md  README.md
期末/: OS复习_大题篇.md  OS复习_概念篇.md
笔记/: 1. OS概述.html  1. OS概述.md  2. 进程管理(a进程与线程).html  2. 进程管理(a进程与线程).md  2. 进程管理(b处理器调度).html  2. 进程管理(c.同步与互斥).html  2. 进程管理(c.同步与互斥).md  2. 进程管理(d.死锁).html  2. 进程管理(d.死锁).md  3. 内存管理(Part1概述).html  3. 内存管理(Part1概述).md  3. 内存管理(Part2虚存).html  3. 内存管理(Part2虚存).md  4. 文件管理(Part1. 概述).html  4. 文件管理(Part2. 外存).html  5. 设备管理.html  5. 设备管理.md
笔记2.0/chapter05_thread/: 第五章 线程.md
笔记2.0/chapter08_deadlocks/: 第八章 死锁.md
